apps/processing/file-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-server-service
  namespace: processing
  labels:
    app.kubernetes.io/name: file-server
    app: file-server
spec:
  ports:
    - port: 8000
      targetPort: file-server
      name: file-server
  selector:
    app.kubernetes.io/name: file-server
    app: file-server
